# loyalty

./: Cargo.toml  README.md  Shuttle.toml  release.sh
crates/loyalty-core/src/: lib.rs  qr_gen.rs
crates/mvp/src/: main.rs
crates/mvp/templates/: stamp.html
crates/seven-oz-client/: Cargo.toml  README.md  index.html
crates/seven-oz-client/src/: main.rs
crates/seven-oz-client/src/components/: qrcode_image.rs
crates/seven-oz-client/src/pages/: collect.rs  display.rs  mod.rs  stamp_card.rs
crates/seven-oz-loyalty/: .gitignore  Cargo.toml  Shuttle.toml
crates/seven-oz-loyalty/src/: customer_code.rs  db.rs  main.rs  stampcard.rs
mvp/: Cargo.toml
mvp/src/: main.rs
mvp/templates/: base.html  qr.html  scan.html
seven-oz-loyalty/: Cargo.toml  README.md  Shuttle.toml
seven-oz-loyalty/src/: main.rs
seven-oz-loyalty/templates/: card.html  qr.html
src/: Cargo.toml
src/loyalty-core/: Cargo.toml
src/seven-oz-client/: Cargo.toml  README.md
src/seven-oz-client/src/: main.rs
src/seven-oz-client/src/components/: mod.rs  stamp_area.css  stamp_area.rs
src/seven-oz-client/src/pages/: collect.rs  display.rs  stamp_card.rs
src/seven-oz-loyalty/: README.md  Shuttle.toml
src/seven-oz-loyalty/assets/: index.html
src/seven-oz-loyalty/src/: main.rs
