[package]
name = "mvp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
image = "0.24.7"
qrcode = "0.12.0"
tera = "1.19.1"
serde = { version = "1.0.192", features = ["derive"] }
rand = "0.8.5"
log = "0.4.20"

