[package]
name = "seven-oz-client"
version = "0.1.0"
edition = "2021"

[build]
target = "wasm32-unknown-unknown"

[features]
qa = []
prod = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loyalty-core = {path = "../loyalty-core"}
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
web-sys = { version = "0.3.69", features = ["DomTokenList", "Element"] }
wasm-bindgen-futures = "0.4.42"
reqwasm = "0.5.0"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
stylist = {version = "0.13.0", features = ["yew", "parser", "yew_use_style"]}
regex = "1.10.4"